--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,11 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 	implementation 'com.google.code.gson:gson:2.8.6'
 	implementation 'com.yanzhenjie:okalle:0.1.7'
-	implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.2.0'
     
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    //implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
